@@ -53,6 +53,7 @@ public:
 
 
     void putChar(BinaryOutputPort* port, ucs4char c);
+    void putString(BinaryOutputPort* port, const ucs4string& s);
 //    int putChar(uint8_t* buf, ucs4char c);
     ucs4char getChar(BinaryInputPort* port);
     ucs4string getString(BinaryInputPort* port);
